# nmrs

./: Cargo.toml  README.md
src/: main.rs
src/cache/: storage.rs
src/commands/: cache.rs  ls.rs  mod.rs  rm.rs
src/scanner/: finder.rs
src/utils/: format.rs
