[package]
name = "nmrs"
version = "0.1.0"
edition = "2021"
description = "A fast and interactive CLI tool for managing node_modules directories"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "nmrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
indicatif = "0.17"
inquire = "0.7"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros"] }
anyhow = "1.0"
base64 = "0.22"
